// Defining syntax as default is proto2
syntax = "proto3";

// defining where autogenerated java classes are to be stored
package com.grpc_system.stubs.result;

// setting this flag to create multiple java class files instead of single one
option java_multiple_files = true;

// request message
message ResultRequest {
  string student_id = 1;
}

// response message to above request
message ResultResponse {
  string student_id = 1;
  Grade maths = 5;
  Grade art = 6;
  Grade chemistry = 7;
}

// Enum Grade
enum Grade {
  PASS = 0;
  FAIL = 1;
}

// Defining service
service ResultService {
  rpc getResultForStudent(ResultRequest) returns (ResultResponse);
}
