// Defining syntax as default is proto2
syntax = "proto3";

// defining where autogenerated java classes are to be stored
package com.grpc_system.stubs.student;

// setting this flag to create multiple java class files instead of single one
option java_multiple_files = true;

// request message
message StudentRequest {
  string student_id = 1;
}

// response message to above request
message StudentResponse {
  string student_id = 1;
  string name = 2;
  int32 age = 3;
  Gender gender = 4;
  Grade maths = 5;
  Grade art = 6;
  Grade chemistry = 7;
}

// Enum Grade
enum Grade {
  PASS = 0;
  FAIL = 1;
}

// Enum Gender
enum Gender {
  MALE = 0;
  FEMALE = 1;
}

// Defining service
service StudentService {
  rpc getStudentInfo(StudentRequest) returns (StudentResponse);
}
